K8S/blogapp/blogapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blogapp-deployment
  namespace: moserblog
spec:
  replicas: 2
  selector: 
    matchLabels:
      app: blogapp
  template:
    metadata:
      labels:
        app: blogapp
    spec:
      containers:
        - name: blogapp
          image: philippmos/moserblog-web:3127
