K8S/blogapp/blogapp-clusteripservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: blogapp-clusteripservice
  namespace: moserblog
spec:
  type: ClusterIP
  selector:
    app: blogapp
  ports:
    - name: blogapp
      protocol: TCP
      port: 80
      targetPort: 80
