K8S/blogapp/blogapp-nodeportservice.yaml

apiVersion: v1
kind: Service
metadata:
  name: blogapp-nodeportservice
  namespace: moserblog
spec:
  type: NodePort
  selector:
    app: blogapp
  ports:
    - name: blogapp
      protocol: TCP
      port: 80
      targetPort: 80
