K8S/blogapp/blogapp-ingressservice.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blogapp-ingressservice
  namespace: moserblog
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: moser-blog.local
      http: 
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: blogapp-clusteripservice
                port:
                  number: 80
